package gameLaby.laby;

public class Monstre extends Position {

    public Monstre(int dx, int dy) {
        super(dx, dy);
    }
}
